fixed spacing for header block

--- a/styles/style.css
+++ b/styles/style.css
@@ -95,12 +95,14 @@ body {
   background-color: white;
   border-top-left-radius: 1.5rem;
   border-top-right-radius: 1.5rem;
+  padding: 40px 20px 20px 40px;
 }
 
 .header-block__first-header {
   color: var(--clr-cyan);
   font-size: 2.1rem;
   font-weight: var(--fw-700);
+  margin-bottom: 1.3rem;
 }
 
 .header-block__second-header {
@@ -109,6 +111,7 @@ body {
 
 .header-block__info {
   color: var(--clr-light-gray);
+  font-size: 1.4rem;
 }
 
 .article-subscription {
